--- a/index.html
+++ b/index.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <main>
+        <nav>
+            <div class="nav-part1">
+                <div class="logo">
+                    logo
+                </div>
+            </div>
+            <div class="nav-part2">
+                <h4>EN <span>RU</span></h4>
+                <h4>Country:India</h4>
+                <h4>Profile</h4>
+                <h4>Wishlist(0)</h4>
+                <h4>Search</h4>
+
+            </div>
+
+        </nav>
+    </main>
 </body>
+
 </html>
