developed landing page with custum scroller

--- a/index.html
+++ b/index.html
@@ -13,19 +13,61 @@
         <nav>
             <div class="nav-part1">
                 <div class="logo">
-                    logo
+
+                </div>
+                <div class="logo">
+
                 </div>
             </div>
             <div class="nav-part2">
-                <h4>EN <span>RU</span></h4>
+                <h4>EN <span>RN</span></h4>
                 <h4>Country:India</h4>
                 <h4>Profile</h4>
                 <h4>Wishlist(0)</h4>
                 <h4>Search</h4>
-
             </div>
 
         </nav>
+        <div id="nav-2">
+            <h3>Sun</h3>
+            <h3>Optical</h3>
+            <h3>Collections</h3>
+            <h3>Studio</h3>
+            <h3>about</h3>
+            <h3>shops</h3>
+            <h3>journal</h3>
+        </div>
+        <div id="content">
+            <div class="text-content">
+                <div class="text">
+                    <h2>Intersteller</h2>
+                </div>
+                <div class="text">
+                    <h2>Fight club</h2>
+                </div>
+                <div class="text">
+                    <h2>21</h2>
+                </div>
+                <div class="text">
+                    <h2>Tenent</h2>
+                </div>
+            </div>
+            <div class="image-content">
+                <div class="img">
+                    <img src="https://wallpapers.com/images/high/interstellar-ice-astronauts-poster-8n1ipvf5nknwmmwa.webp"
+                        alt="">
+                </div>
+                <div class="img">
+                    <img src="https://wallpapercat.com/w/middle-retina/f/5/b/34518-1920x1080-desktop-1080p-fight-club-wallpaper.jpg"
+                        alt="">
+                </div>
+                <div class="img">
+                    <img src="https://wallpapercat.com/w/middle-retina/9/8/3/506595-1920x1080-desktop-1080p-21-movie-background-image.jpg"
+                        alt="">
+                </div>
+
+            </div>
+        </div>
     </main>
 </body>
 
